--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
         "dev": "vite"
     },
     "dependencies": {
+        "@inertiajs/server": "^0.1.0",
+        "@inertiajs/vue3": "^2.1.7",
         "@tailwindcss/vite": "^4.1.11",
+        "@vitejs/plugin-vue": "^6.0.1",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0",
         "tailwindcss": "^4.0.7",
-        "vite": "^7.0.4"
+        "vite": "^7.0.4",
+        "vue": "^3.5.21"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
