--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+          "ssr-build": "vite build --ssr resources/js/ssr.js",
+  "ssr": "node bootstrap/ssr/ssr.mjs"
+
     },
     "dependencies": {
         "@inertiajs/server": "^0.1.0",
@@ -22,5 +25,8 @@
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
         "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
         "lightningcss-linux-x64-gnu": "^1.29.1"
+    },
+    "devDependencies": {
+        "@tailwindcss/forms": "^0.5.10"
     }
 }
