--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
     "scripts": {
         "build": "vite build",
         "dev": "vite",
-          "ssr-build": "vite build --ssr resources/js/ssr.js",
-  "ssr": "node bootstrap/ssr/ssr.mjs"
-
+        "ssr-build": "vite build --ssr resources/js/ssr.js",
+        "ssr": "node bootstrap/ssr/ssr.mjs"
     },
     "dependencies": {
         "@inertiajs/server": "^0.1.0",
         "@inertiajs/vue3": "^2.1.7",
         "@tailwindcss/vite": "^4.1.11",
-        "@vitejs/plugin-vue": "^6.0.1",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
@@ -27,6 +25,13 @@
         "lightningcss-linux-x64-gnu": "^1.29.1"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.10"
+        "@inertiajs/vue3": "^2.0.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/postcss": "^4.1.13",
+        "@vitejs/plugin-vue": "^5.0.0",
+        "autoprefixer": "^10.4.12",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.2.1",
+        "vue": "^3.4.0"
     }
 }
