--- a/.env.example
+++ b/.env.example
@@ -64,6 +64,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
+GOOGLE_PLACES_API_KEY=
 GOOGLE_RECAPTCHA_SITE_KEY=
 GOOGLE_RECAPTCHA_SECRET_KEY=
 GOOGLE_RECAPTCHA_SCORE_THRESHOLD=0.5
