--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "filament/filament": "^4.1",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
@@ -15,7 +16,9 @@
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "*",
+        "stripe/stripe-php": "^18.0",
         "symfony/http-client": "^7.3",
         "symfony/mailgun-mailer": "^7.3",
         "tightenco/ziggy": "^2.0"
