--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "chrome-php/chrome": "^1.14",
         "filament/filament": "^4.1",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
@@ -21,7 +22,10 @@
         "stripe/stripe-php": "^18.0",
         "symfony/http-client": "^7.3",
         "symfony/mailgun-mailer": "^7.3",
-        "tightenco/ziggy": "^2.0"
+        "tightenco/ziggy": "^2.0",
+        "smalot/pdfparser": "^2.10",
+        "phpoffice/phpword": "^1.3",
+        "thiagoalessio/tesseract_ocr": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
