--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite",
+        "dev": "concurrently \"npm:dev:vite\" \"npm:ssr\"",
+        "dev:vite": "vite",
         "ssr-build": "vite build --ssr resources/js/ssr.js",
         "ssr": "node bootstrap/ssr/ssr.js"
     },
@@ -31,6 +32,7 @@
         "@tailwindcss/postcss": "^4.1.13",
         "@vitejs/plugin-vue": "^6.0.1",
         "autoprefixer": "^10.4.12",
+        "baseline-browser-mapping": "^2.9.11",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
         "vue": "^3.4.0"
